Fix blurry cart number

--- a/src/stylesheets/modules/global/_menu.scss
+++ b/src/stylesheets/modules/global/_menu.scss
@@ -36,16 +36,14 @@
 .cart-badge {
   @include position(absolute, $top: -20px, $right: -12px, $index: -1);
   @include sizeEx(18px);
-  backface-visibility: hidden;
   display: flex;
   justify-content: center;
   background-color: $color-c6;
-  transform: rotate(45deg) translateZ(0);
-  -webkit-font-smoothing: subpixel-antialiased;
+  transform: rotate(45deg);
   b {
     @include font($os, rem(12), $black, 700);
     align-self: center;
-    transform: rotate(-45deg);
+    transform: rotate(-45deg) translateZ(0);
   }
 }
 
